--- a/graph-viz/app/views/index.scala.html
+++ b/graph-viz/app/views/index.scala.html
@@ -28,6 +28,7 @@
                 <p id="content">Reply Tweets Dataset</p>
                 <input type="text" class="div" id="query"
                 placeholder="Search number of nodes, range from 1-10000, e.g.500. The default value is 5.">
+                <button onclick="svgGraph()">svg</button>
                 <button onclick="drawGraph()">new submit</button>
                 <button onclick="oldDrawGraph()">submit</button>
             </div>
