--- a/graph-viz/app/views/index.scala.html
+++ b/graph-viz/app/views/index.scala.html
@@ -123,7 +123,7 @@
                     var sw_lng = sw.lng;
                     var sw_lat = sw.lat;
 
-                    let socket = new WebSocket("ws://169.234.17.127:9000/echo");
+                    let socket = new WebSocket("ws://localhost:9000/echo");
 
                     socket.onopen = function (e) {
                         socket.send(query + ' ' + sw_lng + ' ' + ne_lng + ' ' + sw_lat + ' ' + ne_lat);
@@ -201,7 +201,7 @@
                     var sw_lng = sw.lng;
                     var sw_lat = sw.lat;
 
-                    let socket = new WebSocket("ws://169.234.17.127:9000/bundle");
+                    let socket = new WebSocket("ws://localhost:9000/bundle");
                     socket.onopen = function (e) {
                         socket.send(query + ' ' + sw_lng + ' ' + ne_lng + ' ' + sw_lat + ' ' + ne_lat);
                     };
